examples/errors/errors/CalcError.tsb
// Each error variant is its own struct. A plain TS union ties them
// together as "any of these". No `kind` literal anywhere — every
// struct carries its name as a hidden `_struct` brand that tsb adds
// inside `Foo.new(...)` and `Foo.tryNew(...)`. Match dispatches on
// that brand by struct name, never by hand-written discriminator.

struct BadNumber {
  input: string,
}

struct UnknownOp {
  op: string,
}

struct DivByZero {}

export type CalcError = BadNumber | UnknownOp | DivByZero;
